# changes-metadata-manager

./: .env.example  .gitignore  README.md  pyproject.toml  sharepoint_config.example.yaml
.github/workflows/: release.yml  run-tests.yml
aldrovandi_provenance/: folder_metadata_builder.py  generate_provenance.py  sharepoint_extractor.py
changes_metadata_manager/: __init__.py  folder_metadata_builder.py  sharepoint_extractor.py
data/: sharepoint_structure.json
tests/: test_folder_metadata_builder.py  test_provenance.py  test_sharepoint_extractor.py  test_sharepoint_sync.py
tests/fixtures/folder_metadata/nr_1/: dcho.ttl  dchoo.ttl  raw.ttl  rawp.ttl
tests/fixtures/folder_metadata/nr_24/: dcho.ttl  dchoo.ttl  raw.ttl  rawp.ttl
tests/fixtures/folder_metadata/nr_57/: dcho.ttl  dchoo.ttl  raw.ttl  rawp.ttl
