[project]
name = "aldrovandi-provenance"
version = "1.0.0"
description = "Tools for managing provenance information for cultural heritage data using the CHAD-AP model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdflib>=7.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
commit_message = "chore(release): {version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
